# StitchDraft

./: .gitignore  MANIFEST.in  README.md  charts.json  diagram.mmd  pyproject.toml  requirements.txt  visualizaion.html
backend/: README.md  __init__.py
backend/app/: engine_adapter.py  ir_models.py  join_graph.py  main.py  preview_models.py  torso_generator.py  torso_models.py
backend/tests/: test_engine_adapter.py
docs/: refactored_design.uml  refactored_design_class_only.uml  start_design.uml  technical_report.md
engine/: MVP_PLAN.md  __init__.py  chart_section copy.py  chart_section.py  flirt.py  join_demo.json  join_demo1.json  lobster_back.json  main.py  marker_manager.py  raglan.json  run_all_tests.py  test_chart_service_complete.py  test_factory.py  test_integration.json  test_large_pattern_stitch_counts.py  test_milestone_f_stitch_semantics.py  test_named_holds.py  test_pattern_parser_refactor.py  test_pattern_processor.py  test_position_calculator.py  test_refactored_chart_section.py  test_repeat_fix.py  test_service_integration.py  test_validation_infrastructure.py  test_view_models.py  test_ws_start_layout.py  workflow_test.json
engine/engine/: join_demo.json  raglan.json  raglan_back.json  sleeve.json
engine/examples/: raglan_back.json  sleeve.json
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  (+1 more)
knitting_pattern_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
presentation/: test_view_models.html  test_view_models_e2e.html  visualizaion copy.html  visualizaion.html
(+81 files in other folders)
