[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knitting-pattern-engine"
version = "0.1.0"
description = "A library for generating visual representations of knitting patterns"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Diana Whealan"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
engine = ["charts.json"]

[project.scripts]
knitting-pattern-engine = "engine.main:main"
knit-chart = "engine.main:main"

